chore: use id or index for embedded objects if no name is available

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
     <script id="embedded_template" type="text/template">
         <div class="panel-heading">
             <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#{{parent}}" href="#emb{{number}}-{{index}}"><h5 class="embedded_name">{{embName}}</h5>{{name}}
-                </a>
+                <a data-toggle="collapse" data-parent="#{{parent}}" href="#emb{{number}}-{{index}}"><h5 class="embedded_name">{{embName}}</h5></a>
             </h4>
             <div class="emb_links"></div>
         </div>
