feat: add logout button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <li id="login_button"><a onclick="showLogin()" href="#">Login</a></li>
     </script>
 
+    <script id="logout_template" type="text/template">
+        <li id="login_button"><a onclick="logout()" href="#">Logout</a></li>
+    </script>
+
     <script id="nav_links_template" type="text/template">
         {{#links}}
             {{#back_button}}
